<resources>
    <string name="app_name">Мой браузер</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="authentication">Авторизация</string>
    <string name="entrance">Войти</string>
    <string name="I_dont_have_an_account">У меня нет аккаунта</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="I_have_an_account">У меня есть аккаунт</string>
    <string name="name">Имя</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="sign_in">Войдите в аккаунт</string>
    <string name="reg">Зарегистрируйтесь</string>
    <string name="no_account">Нет аккаунта</string>
    <string name="yes_account">Есть аккаунт</string>
    <string name="second_password">Пароль (повторно)</string>
    <string name="main">Главная</string>
    <string name="bookmarks">Закладки</string>
    <string name="history">История</string>
    <string name="settings">Настройки</string>
    <string name="downloads">Загрузки</string>
    <string name="https">Поиск</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear_downloads">Очистить загрузки</string>
    <string name="edit_name">Изменить имя</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="add_bookmark">Добавить закладку</string>
    <string name="bookmark_name">Название закладки</string>
    <string name="url">URL</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="account">Аккаунт</string>
    <string name="main_settings">Основные</string>
    <string name="edit_location">Изменить место жительства</string>
    <string name="edit_password">Изменить пароль</string>
    <string name="edit_loc">Место жительства (город, село)</string>
    <string name="day_news">Новости дня</string>
    <string name="news">Новости</string>
    <string name="weather">Погода</string>
    <string name="library">Библиотека</string>
    <string name="save_in_library">Сохранить в библиотеку</string>
    <string name="collections">Коллекции</string>
    <string name="collections_info">Создайте свою первую коллекцию! В нее можно сохранять важное на одну тему в аккуратном виде</string>
    <string name="error">Что-то пошло не так! Страница не загрузилась.</string>
    <string name="err_code_1">Не получается загрузить веб страницу, попробуйте перезагрузить ее.</string>
    <string name="reload_page">Перезагрузить страницу</string>
    <string name="go_main">Выйти на главную</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Поиск</string>
    <string name="def_search_system">Поисковая система по умолчанию</string>
    <string name="def_location">Локация по умолчанию</string>
    <string name="disabled_weather">Не отображать погоду на главном экране</string>
</resources>